--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
-							<h1>Hi. I'm <strong>Anees Merzi</strong>.</h1>
+							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I strive to develop, build, and genuinely care for my teammates.</em></p>
+						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I develop, build, and genuinely care for my teammates.</em></p>
 						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly">See My Resume</a>
 					</div>
 				</div>
@@ -79,7 +79,7 @@
 		<div class="wrapper style3" id="portfolio">
 			<article>
 				<header>
-					<h2>Here’s some of my recent products.</h2>
+					<h2>Here’s some of my products.</h2>
 					<!--<p>I love all things web and mobile. I'm currently a software project manager.</p>-->
 				</header>
 				<div class="container">
