--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<div class="wrapper style3" id="portfolio">
 			<article>
 				<header>
-					<h2>Here’s some of my products.</h2>
+					<h2>See some of my products below 👇👇👇</h2>
 					<!--<p>I love all things web and mobile. I'm currently a software project manager.</p>-->
 				</header>
 				<div class="container">
