--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I develop, build, and genuinely care for my teammates.</em></p>
-						<a href="/yaboyanees/yaboyanees.github.io/raw/master/Anees%20Merzi%20Resume%20(Product%20Owner).pdf" class="button big scrolly">See Resume</a>
+						<a href="https://github.com/yaboyanees/yaboyanees.github.io/raw/master/Anees%20Merzi%20Resume%20(Product%20Owner).pdf" class="button big scrolly">See Resume</a>
 					</div>
 				</div>
 			</article>
