--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I develop, build, and genuinely care for my teammates.</em></p>
-						<a href="https://github.com/yaboyanees/yaboyanees.github.io/raw/master/Anees%20Merzi%20Resume%20(Product%20Owner).pdf" class="button big scrolly">See Resume</a>
+						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">See Resume</a>
 					</div>
 				</div>
 			</article>
@@ -184,7 +184,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly">Open My Resume</a>
+			<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">Open My Resume</a>
 		</div>
 
 	    <!-- Contact -->
