--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 		<div class="wrapper style1 first" id="top">
 			<article class="container">
 				<div class="row">
-					<div class="4u 12u(mobile)">
+					<!--<div class="4u 12u(mobile)">
 						<span class="image fit"><img src="https://media.licdn.com/dms/image/C5603AQFEfHqLPyhEuw/profile-displayphoto-shrink_200_200/0?e=1564617600&v=beta&t=JDyrBMldTWomkBn0vQV40mBNguswf9g_pmEaTx-W7q0" /></span>
-					</div>
+					</div>-->
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant web & mobile experiences. As a leader, I develop, build, and genuinely care for my teammates.</em></p>
-						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">See Resume</a>
+						<p><em>I'm obsessed with delivering pleasant product experiences. I develop, build, and genuinely care for my team.</em></p>
+						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">See My Resume</a>
 					</div>
 				</div>
 			</article>
