--- a/index.html
+++ b/index.html
@@ -54,23 +54,40 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/mk.png" /></a>
+								<h3>Non-profit Data Report</h3>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
+								<a class="image featured"><img src="images/heatmap.png" /></a>
+								<h3>USA Women's Soccer</h3>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
+								<a class="image featured"><img src="images/tua.png" /></a>
+								<h3>Field Passing Analysis</h3>
+							</article>
+						</div>
+					</div>
+					<div class="row">
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/twitch.PNG" /></a>
 								<h3>Twitch Clips Extension</h3>
-								<p>Creates and displays relevant clips during the livestream for instant replays and cheering.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/tt.PNG" /></a>
 								<h3>Travel Funding Tracker</h3>
-								<p>Temporary Travel Tracker for employees to request funds for their trips through a digital approvals process.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/oha.png" /></a>
 								<h3>OHA Grants Data</h3>
-								<p>Data Visualization App that shows how OHA allocates money across Hawaii in a transparent manner.</p>
 							</article>
 						</div>
 					</div>
@@ -79,21 +96,18 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
 								<h3>Tasks Manager</h3>
-								<p>Approve and Track Tasks issued in memos that are searchable and archived for future reference.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
-								<h3>Executive Engagements</h3>
-								<p>Data Visualization Application for a 4-Star General to make resource decisions for the next quarter.</p>
+								<h3>Executive Engagement Tracker</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
 								<h3>Master Training Calendar</h3>
-								<p>Training Calendar in a timeline view that displays events in a drilldown format to show how each event is nested.</p>
 							</article>
 						</div>
 					</div>
@@ -102,21 +116,18 @@
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
 								<h3>Personnel Status Report</h3>
-								<p>Visualizes 60 different organizations to provide senior executives a snapshot of where eveyone is at daily.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/homepage.png" /></a>
 								<h3>Internal Corporate Site</h3>
-								<p>Created a new internal site for 100,000+ daily users to facilitate information sharing to drive daily operations.</p>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/dir.png" /></a>
 								<h3>Contact Directory</h3>
-								<p>Application to help users find contact details and return results by directorate, rank, and name.</p>
 							</article>
 						</div>
 					</div>
@@ -124,22 +135,19 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/disrupt.png" /></a>
-								<h3>disruptArmy</h3>
-								<p>Informational site about past and upcoming hackathons ranging from cyber security to development.</p>
+								<h3>Non-profit Hackathon Event</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fs.png" /></a>
-								<h3>fhirStarters</h3>
-								<p>Android Application that helps parents manage their kids medication by using data from the cloud to generate alerts.</p>
+								<h3>Medication Administration</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/f4s.png" /></a>
-								<h3>Food 4 Students</h3>
-								<p>Prototype Application for USDA to make a production app that helps families apply for free/discounted school lunch </p>
+								<h3>USDA Lunch Program</h3>
 							</article>
 						</div>
 					</div>
@@ -147,22 +155,19 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/q5.png" /></a>
-								<h3>The Q5</h3>
-								<p>Made dynamic graphs that depict 100,000+ data points for NFL teams to predict team result week by week</p>
+								<h3>The Q5 Football Analytics</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/ops.png" /></a>
-								<h3>OPS</h3>
-								<p>Application to help non-profit organization manage volunteers and automate volunteer onboarding</p>
+								<h3>Volunteer Manager</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/hr1.png" /></a>
-								<h3>HR DSS</h3>
-								<p>Decision Support System for HR department to select the best internal employee for the next promotion/job</p>
+								<h3>HR Decision Support System</h3>
 							</article>
 						</div>
 					</div>
@@ -170,15 +175,13 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/fbt.png" /></a>
-								<h3>FB Tickets</h3>
-								<p>Helps automate the process of distributing/tracking tickets to football players and staff for each weeks games</p>
+								<h3>Football Ticket Manager</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/icr.png" /></a>
-								<h3>ICR INC.</h3>
-								<p>Informative website for Industrial Coating and Restoration Inc. Used to showcase their services and references</p>
+								<h3>Corporate Website</h3>
 							</article>
 						</div>					
 					</div>
