--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant product experiences. I develop, build, and genuinely care for my team.</em></p>
-						<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">See My Resume 🗎</a>
+						<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">See My Resume 🗎</a>
 					</div>
 				</div>
 			</article>
@@ -187,7 +187,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://drive.google.com/open?id=1UYI_G7UimVkGrWACpRejbuz_xnqbgYXP" class="button big scrolly" target="_blank">Open My Resume</a>
+			<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">Open My Resume</a>
 		</div>
 
 	    <!-- Contact -->
