--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/cop.png" /></a>
+								<h3>NFL Scout Project</h3>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/mk.png" /></a>
 								<h3>Non-profit Data Report</h3>
 							</article>
@@ -64,14 +70,14 @@
 								<h3>USA Women's Soccer</h3>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/tua.png" /></a>
 								<h3>Field Passing Analysis</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/twitch.PNG" /></a>
@@ -84,14 +90,15 @@
 								<h3>Travel Funding Tracker</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/oha.png" /></a>
 								<h3>OHA Grants Data</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
@@ -104,14 +111,15 @@
 								<h3>Executive Engagement Tracker</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
 								<h3>Master Training Calendar</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
@@ -124,14 +132,15 @@
 								<h3>Internal Corporate Site</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/dir.png" /></a>
 								<h3>Contact Directory</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/disrupt.png" /></a>
@@ -144,14 +153,15 @@
 								<h3>Medication Administration</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/f4s.png" /></a>
 								<h3>USDA Lunch Program</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/q5.png" /></a>
