--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/cop.png" /></a>
+								<a class="image featured"><img src="images/com.png" /></a>
 								<h3>NFL Scout Project</h3>
 							</article>
 						</div>
