--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						<header style="margin:0;">
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant product experiences. I develop, build, and genuinely care for my team.</em></p>
-						<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">See My Resume 🗎</a>
+						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for my others.</em></p>
+						<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">See My Resume 📄</a>
 					</div>
 				</div>
 			</article>
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">Open My Resume</a>
+			<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">Open My Resume 📂</a>
 		</div>
 
 	    <!-- Contact -->
