--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/etm.png" /></a>
-								<h3>Tasks Manager</h3>
+								<h3>Task Manager</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
