--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<div class="wrapper style1 first" id="top">
 			<article class="container">
 				<div class="row">
-					<!--<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="https://media.licdn.com/dms/image/C5603AQFEfHqLPyhEuw/profile-displayphoto-shrink_200_200/0?e=1564617600&v=beta&t=JDyrBMldTWomkBn0vQV40mBNguswf9g_pmEaTx-W7q0" /></span>
-					</div>-->
+					<div class="4u 12u(mobile)">
+						<span class="image fit"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQFvz4Djt35k0g/profile-displayphoto-shrink_200_200/0?e=1591228800&v=beta&t=y5sgZFHGyDy9eddTf8rhbrxLhQEnQscmCe97UKqJ3_0" /></span>
+					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
