--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header style="margin:0;">
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for my others.</em></p>
+						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</em></p>
 						<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">See My Resume 📄</a>
 					</div>
 				</div>
