--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQFvz4Djt35k0g/profile-displayphoto-shrink_200_200/0?e=1591228800&v=beta&t=y5sgZFHGyDy9eddTf8rhbrxLhQEnQscmCe97UKqJ3_0" /></span>
+						<span class="image fit"><img src="https://avatars1.githubusercontent.com/u/498666?s=460&u=61f15d3916db3269aecf270d83e53a15b016fa9a&v=4" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
