--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</em></p>
-						<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">See My Resume 📄</a>
+						<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" target="_blank">Let's Connect on LinkedIn ✅</a>
 					</div>
 				</div>
 			</article>
@@ -193,7 +193,7 @@
 								<a class="image featured"><img src="images/icr.png" /></a>
 								<h3>Corporate Website</h3>
 							</article>
-						</div>					
+						</div>
 					</div>
 				</div>
 			</article>
@@ -210,7 +210,7 @@
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/aneesmerzi" class="icon fa-linkedin"></a></li>
 								<li><a href="https://github.com/yaboyanees" class="icon fa-github"></a></li>
-								<li><a href="https://plus.google.com/u/0/+AneesMerzi" class="icon fa-google-plus"></a></li>
+								<!--<li><a href="https://plus.google.com/u/0/+AneesMerzi" class="icon fa-google-plus"></a></li>-->
 								<li><a href="https://devpost.com/Yaboyanees/" class="icon fa-anchor"></a></li>
 							</ul>
 						</div>
@@ -218,7 +218,7 @@
 				</div>
 				<footer>
 					<ul id="copyright">
-						<li>&copy; 2018 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2020 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</article>
