--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 
-	    <!-- Nav -->
+	    <!-- Nav Not being Used-->
 		<!--<nav id="nav">
 			<ul class="container">
 				<li><a href="#top">Top</a></li>
