--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://docs.google.com/document/d/1M2BVRfNpfmGYC6CehOYbarLnosiiLr4nuJIDDSEWQng/" class="button big scrolly" target="_blank">Open My Resume 📂</a>
+			<a href="https://drive.google.com/file/d/1mL3yd2PG5VyTLAwzoSnwKaWb4DNQ5zOr/view" class="button big scrolly" target="_blank">Open My Resume 📂</a>
 		</div>
 
 	    <!-- Contact -->
