--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/MC.png" /></a>
+								<h3>Startup Mockup</h3>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/com.png" /></a>
 								<h3>NFL Scout Project</h3>
 							</article>
@@ -64,14 +70,15 @@
 								<h3>Non-profit Data Report</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/heatmap.png" /></a>
 								<h3>USA Women's Soccer</h3>
 							</article>
 						</div>
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/tua.png" /></a>
@@ -84,15 +91,15 @@
 								<h3>Twitch Clips Extension</h3>
 							</article>
 						</div>
+
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/tt.PNG" /></a>
 								<h3>Travel Funding Tracker</h3>
 							</article>
 						</div>
-
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/oha.png" /></a>
@@ -105,27 +112,26 @@
 								<h3>Task Manager</h3>
 							</article>
 						</div>
+					</div>
+					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/eea.png" /></a>
 								<h3>Executive Engagement Tracker</h3>
 							</article>
 						</div>
-
-					</div>
-					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/mtc.png" /></a>
 								<h3>Master Training Calendar</h3>
 							</article>
 						</div>
-						<div class="4u 12u(mobile)">
+						<!-- <div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/perstat.png" /></a>
 								<h3>Personnel Status Report</h3>
 							</article>
-						</div>
+						</div> -->
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/homepage.png" /></a>
