--- a/index.html
+++ b/index.html
@@ -54,8 +54,14 @@
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
+								<a class="image featured"><img src="images/Levels.png" /></a>
+								<h3>Levels.FYI</h3>
+							</article>
+						</div>
+						<div class="4u 12u(mobile)">
+							<article class="box style2">
 								<a class="image featured"><img src="images/MW.png" /></a>
-								<h3>Startup Mockup</h3>
+								<h3>MustWants App UI/UX</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
@@ -64,13 +70,6 @@
 								<h3>NFL Scout Project</h3>
 							</article>
 						</div>
-						<div class="4u 12u(mobile)">
-							<article class="box style2">
-								<a class="image featured"><img src="images/mk.png" /></a>
-								<h3>Non-profit Data Report</h3>
-							</article>
-						</div>
-
 					</div>
 					<div class="row">
 						<div class="4u 12u(mobile)">
@@ -81,14 +80,14 @@
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/tua.png" /></a>
-								<h3>Field Passing Analysis</h3>
+								<a class="image featured"><img src="images/mk.png" /></a>
+								<h3>Non-profit Data Report</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
-								<a class="image featured"><img src="images/twitch.PNG" /></a>
-								<h3>Twitch Clips Extension</h3>
+								<a class="image featured"><img src="images/tua.png" /></a>
+								<h3>Field Passing Analysis</h3>
 							</article>
 						</div>
 
