--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta name="keywords" content="aneesmerzi, anees merzi, yaboyanees, merzianees, anees portfolio">
-		<meta name="description" content="Click to view Anees Merzi's portfolio page.">
+		<meta name="description" content="Click to view Anees Merzi's portfolio.">
 
 		<title>Anees Merzi Portfolio</title>
 		<meta charset="utf-8" />
@@ -55,13 +55,13 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/Levels.png" /></a>
-								<h3>Levels.FYI</h3>
+								<h3>Levels.fyi Contributor</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/MW.png" /></a>
-								<h3>MustWants App UI/UX</h3>
+								<h3>MustWants Contributor</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
@@ -75,7 +75,7 @@
 						<div class="4u 12u(mobile)">
 							<article class="box style2">
 								<a class="image featured"><img src="images/heatmap.png" /></a>
-								<h3>USA Women's Soccer</h3>
+								<h3>USA Women's Soccer 2019</h3>
 							</article>
 						</div>
 						<div class="4u 12u(mobile)">
