minor styling changes

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="../images/me.JPG" /></span>
+						<span class="image fit"><img src="images/me.jpg" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
 							<h1>Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</em></p>
-						<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" target="_blank">Let's Connect on LinkedIn ✅</a>
+						<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" target="_blank">Let's Connect on LinkedIn 🤙</a>
 					</div>
 				</div>
 			</article>
@@ -202,7 +202,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://drive.google.com/file/d/1BaibyRfvuOQRzA6oIuh7E2dNM5CIXubQ/view" class="button big scrolly" target="_blank">Open My Resume 📂</a>
+			<a href="https://drive.google.com/file/d/1BaibyRfvuOQRzA6oIuh7E2dNM5CIXubQ/view" class="button big scrolly no-box" target="_blank">Open My Resume 📂</a>
 		</div>
 
 	    <!-- Contact -->
@@ -211,7 +211,7 @@
 				<div>
 					<div class="row">
 						<div class="12u">
-							<h3>You Can Find me on ...</h3>
+							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li><a href="https://www.linkedin.com/in/aneesmerzi" class="icon fa-linkedin"></a></li>
 								<li><a href="https://github.com/yaboyanees" class="icon fa-github"></a></li>
