--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<article class="container">
 				<div class="row">
 					<div class="4u 12u(mobile)">
-						<span class="image fit"><img src="images/me.jpg" /></span>
+						<span class="image fit"><img src="../images/me.jpg" /></span>
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
