--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://drive.google.com/file/d/1BaibyRfvuOQRzA6oIuh7E2dNM5CIXubQ/view" class="button big scrolly no-box" target="_blank">Open My Resume 📂</a>
+			<a href="https://drive.google.com/file/d/1BaibyRfvuOQRzA6oIuh7E2dNM5CIXubQ/view" class="button big scrolly" style="box-shadow:none;" target="_blank">Open My Resume 📂</a>
 		</div>
 
 	    <!-- Contact -->
