--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</div>
 					<div class="8u 12u(mobile)">
 						<header style="margin:0;">
-							<h1 style="text-shadow:none;">Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
+							<h1 class="cssanimation elevateRight">Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
 						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</em></p>
 						<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" target="_blank">Let's Connect on LinkedIn 🤙</a>
