--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					</div>
 				</div>
 			</article>
-			<a href="https://drive.google.com/file/d/1BaibyRfvuOQRzA6oIuh7E2dNM5CIXubQ/view" class="button big scrolly" style="box-shadow:none;" target="_blank">Open My Resume 📂</a>
+			<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" style="box-shadow:none;" target="_blank">Let's Connect on LinkedIn 🤙</a>
 		</div>
 
 	    <!-- Contact -->
@@ -223,7 +223,7 @@
 				</div>
 				<footer>
 					<ul id="copyright">
-						<li>&copy; 2020 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2021 Anees Merzi. All rights reserved.</li><li>Template: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 			</article>
