--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header style="margin:0;">
 							<h1 class="cssanimation elevateRight">Hi 👋, I'm <strong>Anees Merzi</strong>.</h1>
 						</header>
-						<p><em>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</em></p>
+						<p>I'm obsessed with delivering pleasant product experiences by developing, building, and genuinely caring for all.</p>
 						<a href="https://linkedin.com/in/aneesmerzi" class="button big scrolly" target="_blank">Let's Connect on LinkedIn 🤙</a>
 					</div>
 				</div>
